@@ -1,30 +1,35 @@
 package book.store.app.bookstoreapp.mapper;
 
 import book.store.app.bookstoreapp.config.MapperConfig;
-import book.store.app.bookstoreapp.dto.book.BookDtoWithoutCategoryIds;
+import book.store.app.bookstoreapp.dto.book.BookDtoNoCategory;
 import book.store.app.bookstoreapp.dto.book.BookResponseDto;
 import book.store.app.bookstoreapp.dto.book.CreateBookRequestDto;
 import book.store.app.bookstoreapp.model.Book;
 import book.store.app.bookstoreapp.model.Category;
-import org.mapstruct.AfterMapping;
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
-import org.mapstruct.MappingTarget;
+import org.mapstruct.Named;
 
 @Mapper(config = MapperConfig.class)
 public interface BookMapper {
     @Mapping(target = "id", ignore = true)
-    Book toModel(CreateBookRequestDto createBookRequestDto);
+    @Mapping(target = "deleted", ignore = true)
+    @Mapping(target = "categories", ignore = true)
+    Book toModel(CreateBookRequestDto requestDto);
 
+    @Mapping(target = "categoryIds", source = "categories",
+            qualifiedByName = "categoriesToIds")
     BookResponseDto toDto(Book book);
 
-    BookDtoWithoutCategoryIds toDtoWithoutCategories(Book book);
+    BookDtoNoCategory toDtoWithoutCategories(Book book);
 
-    @AfterMapping
-    default void setCategoryIds(@MappingTarget BookResponseDto bookResponseDto, Book book) {
-        bookResponseDto.setCategoryIds(book.getCategories()
-                .stream()
+    @Named("categoriesToIds")
+    default List<Long> categoriesToIds(Set<Category> categories) {
+        return categories.stream()
                 .map(Category::getId)
-                .toList());
+                .collect(Collectors.toList());
     }
 }
